--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,4 +2,36 @@ body {
 
     background-color: #303030;
 }
+.FlexPadre{
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 0, 0, 0.568);
+    margin: 20px;
+}
+.flexhijo{
+    display: flex;
+    flex-wrap: wrap;
+    color: white;
+    margin: 20px;
     
+}
+.buscador{
+    display: flex;
+    margin: 20px;
+    size: 80px;
+}
+.controles{
+
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+}
+
+    
+.tituloprincipal{
+    text-decoration: none;
+    color: white;
+    font-size: 50px;
+    margin: 0px 100px 5px 40px;
+}
