Realice mejoras en el CSS del Index

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -58,6 +58,11 @@ font-size: 35px;
     margin: 10px;
     
 }
+.titulopelicula{
+    color: white;
+    text-align: center;
+    margin: 25px;
+}
 
 
 
