Corregi posicion de titulos en el index

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,6 +64,10 @@ font-size: 35px;
     margin: 25px;
     text-decoration: none;
 }
+.tituoloprincipaldepelicula{
+    text-align: center;
+}
+
 
 
 
