--- a/css/estilo.css
+++ b/css/estilo.css
@@ -67,6 +67,24 @@ font-size: 35px;
 .tituoloprincipaldepelicula{
     text-align: center;
 }
+/*Este es el css del footer*/
+.footer{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    align-items: center;
+}
+.nombres{
+    margin: 20px 40px 20px 40px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+.gmail{
+    color: white;
+    text-decoration: none;
+}
+
 
 
 
@@ -153,9 +171,11 @@ text-align: center;
     margin: 10px;
 }
 
+
 @media(max-width:480px) {
     
 }
+
 
 
 
