--- a/css/estilo.css
+++ b/css/estilo.css
@@ -172,8 +172,10 @@ text-align: center;
 }
 
 
-@media(max-width:480px) {
-    
+@media screen and (max-width:800px) {
+    .cabezera{
+        flex-direction: column;
+    }
 }
 
 
