--- a/css/estilo.css
+++ b/css/estilo.css
@@ -105,7 +105,7 @@ font-size: 35px;
     color: white;
 font-style: none;
 font-size: 35px;
-text-decoration: underline;
+text-decoration: none;
 text-align: center;
 }
 
@@ -193,6 +193,10 @@ text-align: center;
    background-color: yellowgreen;
    margin: 5px;
    
+}
+.colorLetraGenero{
+    color: white;
+    text-decoration: none;
 }
 
 
