--- a/css/estilo.css
+++ b/css/estilo.css
@@ -112,9 +112,10 @@ text-shadow: 4px 8px 35px rgb(155, 145, 145);
 .detalles{
     color: white;
 font-style: none;
-font-size: 35px;
+font-size: 50px;
 text-decoration: none;
 text-align: center;
+font-family: 'Bebas Neue', cursive;
 }
 
 .duracion{
@@ -124,6 +125,7 @@ text-align: center;
     font-size: 1,5em;
     line-height: 1;
     margin: 10px;   
+    font-family: 'Commissioner', sans-serif;
 
 }
 .sectionpadre{
@@ -136,6 +138,8 @@ text-align: center;
     color: white;
     font-size: 40px;
     align-items: center;
+    font-family: 'Bebas Neue', cursive;
+    
     
 }
 .peliculaprincipal{
@@ -151,6 +155,7 @@ text-align: center;
    padding: 20px;
    text-align: center;
    text-decoration: none;
+   font-family: 'Commissioner', sans-serif;
    
    
 
@@ -170,21 +175,25 @@ text-align: center;
     color: white;
     font-size: 20px;
     margin: 10px;
+    font-family: 'Commissioner', sans-serif;
 }
 .calificacion{
     color: white;
     font-size: 25px;
     margin: 10px;
+    font-family: 'Commissioner', sans-serif;
 }
 .puntuacion{
     color: white;
     font-size: 25px;
     margin: 10px;
+    font-family: 'Commissioner', sans-serif;
 }
 .estreno{
     color: white;
     font-size: 25px;
     margin: 10px;
+    font-family: 'Commissioner', sans-serif;
 }
 .linkfinal{
     display: flex;
