--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,6 @@
+
 body {
+
 
     background-color: #303030;
 
@@ -35,6 +37,7 @@ body {
 .buscador{
    display: flex;
     margin: 0px 180px 0px 0px;
+    
 
 }
 input{
@@ -82,14 +85,15 @@ text-shadow: 4px 8px 35px rgb(155, 145, 145);
 }
 /*Este es el css del footer*/
 .footer{
+    padding: 0;
     display: flex;
     justify-content: center;
     background-color: black;
     align-items: center;
 }
 .nombres{
-    margin: 20px 40px 20px 40px;
-    text-align: center;
+    
+    
     color: white;
     font-size: 20px;
 }
@@ -97,6 +101,7 @@ text-shadow: 4px 8px 35px rgb(155, 145, 145);
     color: white;
     text-decoration: none;
 }
+
 
 /*Usando css para detailmovie*/
 
@@ -134,6 +139,7 @@ font-family: 'Bebas Neue', cursive;
     display: flex;
     align-items: center;
     margin: 30px 10px 30px 10px;
+    
 }
 .sinopsis{
     margin: 70px 40px 40px 10px;
@@ -219,29 +225,55 @@ font-family: 'Bebas Neue', cursive;
 
 
 
-@media screen and (min-width:768px) {
+
+@media screen and (max-width:768px) {
+    .footer{
+        flex-direction: column;
+        align-items: center;
+       }
     .cabezera{
         flex-direction: column;
         align-items: center;
     }
-}
-@media(max-width: 375px){
-    .cabezera{
-        flex-direction: column;
-        align-items: center;
+    .titulo{
+        margin: 0%;
     }
 }
-@media screen and (min-width:768px) {
-    .footer{
-        flex-direction: column;
-        align-items: center;
-    }
+@media screen and (max-width:420px) {
+.footer{
+width: 100vw;
+}   
+.cabezera{
+    width: 100vw;
+    
+} 
+.sectionpadre{
+    flex-direction: column;
 }
-@media(max-width: 375px){
-    .footer{
-        flex-direction: column;
-        align-items: center;
-    }
+.titulo{
+    margin: 0%;
+}
+
+
+    
+}
+.buscador{
+    margin: 0% auto;
+}
+.controleshijo{
+    font-size: 14px;
+    padding: 2px;
+}
+.nombres{
+     text-align:none ;
+}
+.gmail{
+    text-align: left;
+    
+}
+.nombres{
+    margin: 20px;
+}
 }
 
 
