--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,7 +103,7 @@ text-shadow: 4px 8px 35px rgb(155, 145, 145);
 }
 
 
-/*Usando css para detailmovie y detailserie con vincilacion en linea*/
+/*Usando css para detailmovie y detailserie*/
 
 
 .titulosdetalles{ 
